<resources>
    <string name="app_name">SuperNote</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_start">Start</string>
    <string name="lbl_start_date">Start Date:</string>
    <string name="lbl_end">End</string>
    <string name="lbl_end_date">End Date:</string>
    <string name="lbl_is_all_day">Is All Day</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_alert">Alert</string>
    <string name="lbl_add_list_item">+ List item</string>
    <string name="lbl_tag">Tag:</string>
    <string name="lbl_10_minutes">10 minutes</string>
    <string name="lbl_30_minutes">30 minutes</string>
    <string name="lbl_1_hour">1 hour</string>
    <string name="lbl_1_day">1 day</string>
    <string name="lbl_2_day">2 day</string>
    <string name="lbl_alert_at">Alert before event</string>
    <string name="lbl_no_alert">No alert</string>
    <string name="lbl_tag_name">Tag name</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_select_color">Select color</string>
    <string name="lbl_new_tag">New tag</string>
    <string name="lbl_todo_title">Todo title</string>
    <string name="lbl_all_day">All day</string>
    <string name="lbl_priority">Priority</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_todo_updated">Todo updated</string>
    <string name="lbl_separate_time">-</string>

    <string name="lbl_insert_todo_tag_list_failed">Insert list tag failed, please try again</string>
    <string name="lbl_insert_todo_failed">Insert todo failed, please try again</string>
    <string name="lbl_some_thing_went_wrong">Some thing went wrong</string>
    <string name="lbl_calendar_planning">Calendar planning</string>
    <string name="lbl_list_note">List note</string>
    <string name="lbl_draft_note_title">Note your idea</string>
    <string name="lbl_note_some_thing_here">Noting some thing here</string>
    <string name="lbl_evaluate">Evaluate</string>
    <string name="lbl_day_off">Day off</string>

    <string name="lbl_day">D</string>
    <string name="lbl_full_day">Day</string>
    <string name="lbl_month">M</string>
    <string name="lbl_full_month">Month</string>
    <string name="lbl_week">W</string>
    <string name="lbl_full_week">Week</string>

    <string name="lbl_evaluate_title">Evaluate Title</string>
    <string name="lbl_evaluate_description">Evaluate description</string>
    <string name="lbl_evaluate_datetime">Evaluate datetime</string>
    <string name="lbl_date_time">Date time:</string>
    <string name="lbl_check_list">Check list:</string>
    <string name="lbl_loading_your_todos">Loading your todos</string>
    <string name="lbl_new_todos">New Todos</string>
    <string name="lbl_previous_todos">Previous Todos</string>

    <string name="lbl_day_evalute">Day Evaluate</string>
    <string name="lbl_week_evalute">Week Evaluate</string>
    <string name="lbl_month_evalute">Month Evaluate</string>
    <string name="lbl_note">Note</string>

    <string name="lbl_update_complete">Update complete</string>
    <string name="lbl_empty_todo_day">You do not have any todo today</string>
    <string name="lbl_empty_todo_week">You do not have any todo this week</string>
    <string name="lbl_empty_todo_month">You do not have any todo this month</string>
    <string name="lbl_today_todo">Today todo</string>
    <string name="lbl_this_week_todo">This week todo</string>
    <string name="lbl_this_month_todo">This month todo</string>
    <string name="lbl_evaluate_time">Evaluate time:\u0020</string>
    <string name="lbl_evaluate_today">Today\u0020</string>
    <string name="lbl_evaluate_week">Week\u0020</string>
    <string name="lbl_evaluate_month">Month\u0020</string>
    <string name="lbl_evaluate_list">List Evaluate</string>

    <string name="lbl_take_note">Take note ...</string>
    <string name="lbl_insert_draft_note_complete">Create new draft note</string>
    <string name="lbl_empty_note_view">Add your notes now</string>

    <string name="lbl_notification_description">This notification will show up when todo alarm was set</string>
    <string name="lbl_evaluate_type_string">Evaluate type:</string>
    <string name="lbl_add_new_evaluate_now">Add new evaluate now</string>
    <string name="lbl_is_optimize">Is Optimize\u0020</string>
    <string name="lbl_set_daily_working_time">Working hours</string>
    <string name="lbl_to">to</string>
    <string name="lbl_working_days">Working days</string>
    <string name="lbl_sort_config">Sort configure</string>
    <string name="lbl_daily_estimate">Daily estimate:</string>
    <string name="lbl_total_estimate">Total estimate:</string>
    <string name="lbl_hours">Hours</string>
    <string name="lbl_deadline">Deadline:</string>
    <string name="lbl_high_priority">High priority</string>
    <string name="lbl_medium_priority">Medium priority</string>
    <string name="lbl_low_priority">Low priority</string>
    <string name="lbl_open_drawer">Open drawer</string>
    <string name="lbl_close_drawer">Close drawer</string>
    <string name="lbl_planning_draft_note">Planning draft note</string>
    <string name="lbl_schedule">Schedule</string>
</resources>
