<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_round_corner_gray"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/lbl_alert_at"
            android:fontFamily="@font/lato_semibold"
            android:textColor="@color/colorWhiteGray"
            android:textSize="20sp"
            />

        <RadioGroup
            android:id="@+id/rgbAlertPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbNoAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_no_alert"
                style="@style/NormalTextStyle"
                />
            <RadioButton
                android:id="@+id/rbTenMinute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_10_minutes"
                style="@style/NormalTextStyle"/>
            <RadioButton
                android:id="@+id/rbThirtyMinute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_30_minutes"
                style="@style/NormalTextStyle"/>
            <RadioButton
                android:id="@+id/rbOneHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_1_hour"
                style="@style/NormalTextStyle"/>
            <RadioButton
                android:id="@+id/rbOneDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_1_day"
                style="@style/NormalTextStyle"/>
            <RadioButton
                android:id="@+id/rbTwoDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_2_day"
                style="@style/NormalTextStyle"/>
        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/bg_button_ripple_black_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnSave"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAlignment="center"
                android:textColor="@color/colorWhiteGray"
                android:text="@string/lbl_cancel"/>
            <TextView
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/bg_button_ripple_black_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnCancel"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:textColor="@color/colorWhiteGray"
                android:text="@string/lbl_save"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>