<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/bg_round_corner_dark_gray"
    >

    <RelativeLayout
        android:id="@+id/rlEvaluateType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp">
        <View
            android:id="@+id/evaluateIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_circle_fb_green" />
        <TextView
            android:id="@+id/tvEvaluateIcon"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_month"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </RelativeLayout>

    <View
        android:id="@+id/vLine"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/rlEvaluateType"
        android:background="@color/colorWhiteGray"/>

    <TextView
        android:id="@+id/tvEvaluateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/vLine"
        android:ellipsize="end"
        android:maxLines="1"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/colorWhiteGray"
        android:textSize="18sp"
        android:text="@string/lbl_evaluate_title"
        />

    <TextView
        android:id="@+id/tvEvaluateDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/vLine"
        android:layout_below="@id/tvEvaluateTitle"
        android:ellipsize="end"
        android:maxLines="1"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/grey_500"
        android:textSize="16sp"
        android:text="@string/lbl_evaluate_description"
        />
</RelativeLayout>