<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDark"
    android:paddingStart="6dp"
    android:paddingTop="5dp"
    android:paddingEnd="6dp"
    android:paddingBottom="5dp">

    <RelativeLayout
        android:id="@+id/rlEvaluateType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_centerVertical="true">

        <View
            android:id="@+id/evaluateIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_circle_fb_green" />

        <TextView
            android:id="@+id/tvEvaluateIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/lbl_month"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/vLine"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/rlEvaluateType"
        android:background="@color/colorWhiteGray" />

    <TextView
        android:id="@+id/tvEvaluateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/vLine"
        android:ellipsize="end"
        android:fontFamily="@font/lato_regular"
        android:maxLines="1"
        android:text="@string/lbl_evaluate_title"
        android:textColor="@color/colorWhiteGray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvEvaluateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEvaluateTitle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/vLine"
        android:ellipsize="end"
        android:fontFamily="@font/lato_regular"
        android:maxLines="1"
        android:text="@string/lbl_evaluate_datetime"
        android:textColor="@color/grey_500"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tvEvaluateTime"
        android:layout_marginTop="5dp"
        android:background="@color/grey_500" />
</RelativeLayout>