<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGray">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_border_icon_navigation"
        />

    <TextView
        android:id="@+id/btnPlanning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:drawableStart="@drawable/ic_edit_white"
        android:drawablePadding="15dp"
        android:background="@drawable/bg_button_ripple_black_color"
        android:text="@string/lbl_calendar_planning"
        android:textSize="20sp"
        android:fontFamily="@font/lato_semibold"
        android:textColor="@color/colorWhiteGray"
        android:layout_below="@id/ivIcon"
        />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/btnPlanning"
        android:background="@color/grey_500"
        />

    <TextView
        android:id="@+id/btnDraftList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:drawableStart="@drawable/ic_note_white"
        android:drawablePadding="15dp"
        android:background="@drawable/bg_button_ripple_black_color"
        android:textSize="20sp"
        android:fontFamily="@font/lato_semibold"
        android:textColor="@color/colorWhiteGray"
        android:text="@string/lbl_list_note"
        />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/btnDraftList"
        android:background="@color/grey_500"
        />

    <TextView
        android:id="@+id/btnEvaluate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:drawableStart="@drawable/ic_assignment_white"
        android:drawablePadding="15dp"
        android:background="@drawable/bg_button_ripple_black_color"
        android:textSize="20sp"
        android:fontFamily="@font/lato_semibold"
        android:textColor="@color/colorWhiteGray"
        android:text="@string/lbl_evaluate"
        />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/btnEvaluate"
        android:background="@color/grey_500"
        />

    <TextView
        android:id="@+id/btnDayOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view3"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:drawableStart="@drawable/ic_date_range_white"
        android:drawablePadding="15dp"
        android:background="@drawable/bg_button_ripple_black_color"
        android:textSize="20sp"
        android:fontFamily="@font/lato_semibold"
        android:textColor="@color/colorWhiteGray"
        android:text="@string/lbl_day_off"
        />

</RelativeLayout>