<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_corner_gray">

    <View
        android:id="@+id/viewDetailTodo"
        android:layout_width="100dp"
        android:layout_height="4dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round_corner_white_gray_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDetailTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/viewDetailTodo">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lbl_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/NormalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lbl_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvIsAllDay"
            style="@style/NormalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_is_all_day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <CheckBox
            android:id="@+id/cbIsAllDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:enabled="false"
            style="@style/CustomWhiteCheckBox"
            app:layout_constraintStart_toEndOf="@id/tvIsAllDay"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <TextView
            android:id="@+id/tvPriorityTag"
            style="@style/NormalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/lbl_priority"
            app:layout_constraintEnd_toStartOf="@id/btnPriority"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <RelativeLayout
            android:id="@+id/btnPriority"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            android:background="@drawable/circle_white_gray"
            >
            <TextView
                android:id="@+id/tvPriority"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:fontFamily="@font/lato_semibold"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/colorDark"
                android:text="9"
                />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCheckList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintHeight_min="50dp"
            app:layout_constraintHeight_max="300dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_check_list_detail_todo"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvIsAllDay"
            app:layout_constraintBottom_toTopOf="@id/rvTagList"
            tools:listitem="@layout/item_check_list_item" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTagList"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_tag_list_detail_todo"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rlActionDetailTodo"
            tools:listitem="@layout/item_tag" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rlActionDetailTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/btnDeleteTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_ripple_black_color"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnEditTodo"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/lbl_delete"
                style="@style/NormalTextStyle"
                />
            <TextView
                android:id="@+id/btnEditTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_ripple_black_color"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnDeleteTodo"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/lbl_edit"
                style="@style/NormalTextStyle"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>