<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:paddingTop="5dp"
    android:paddingStart="3dp"
    android:paddingEnd="3dp"
    android:paddingBottom="5dp"
    android:background="@drawable/bg_round_corner_dark_gray">

    <TextView
        android:id="@+id/tvTodoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:ellipsize="end"
        android:maxLines="1"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/colorWhiteGray"
        android:textSize="18sp"
        android:text="@string/lbl_todo_title"
        />

    <RelativeLayout
        android:id="@+id/rlDateTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvTodoTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rlCheckList"
        >
        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:textColor="@color/colorWhiteGray"
            android:fontFamily="@font/lato_semibolditalic"
            android:text="25, Oct 2019, 10:00"
            />
        <TextView
            android:id="@+id/tvSeparate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStartTime"
            android:layout_centerHorizontal="true"
            android:text="@string/lbl_separate_time"
            android:fontFamily="@font/lato_regular"
            android:textSize="14sp"
            android:textColor="@color/colorWhiteGray"
            />
        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvSeparate"
            android:textSize="14sp"
            android:textColor="@color/colorWhiteGray"
            android:fontFamily="@font/lato_semibolditalic"
            android:text="25, Oct 2019, 10:00"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlCheckList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/rlDateTime"
        app:layout_constraintTop_toBottomOf="@id/tvTodoTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/tvCheckListTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/lato_semibolditalic"
            android:text="@string/lbl_check_list"
            android:textColor="@color/colorWhiteGray"
            />

        <TextView
            android:id="@+id/tvCheckSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_toEndOf="@id/tvCheckListTag"
            android:text="10/20"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/colorWhiteGray"
            android:textSize="14sp"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>